test/library/standard/Sort/errors/errors-comparator.keypartargs.good
errors-comparator.chpl:9: In function 'main':
errors-comparator.chpl:17: error: The comparator keyPartArgs implements 'keyPartComparator' but does not correctly provide a 'keyPart' method for int(64)
